# fastapi-todo-mysql

./: README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
